--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,23 @@
 #root{
     font-family: 'Poppins', sans-serif;
 }
+.loading span{
+    animation-name: dots;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+.loading span:nth-child(2)
+{
+    animation-delay: 0.4s;
+}
+.loading span:nth-child(3)
+{
+    animation-delay:0.8s;
+}
+@keyframes dots{
+    50%{
+        opacity: 0;
+        transform:scale(0.7) translateY(10px);
+    }
+}
