--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,36 +2,58 @@
 @tailwind components;
 @tailwind utilities;
 
-#root{
+#root {
     font-family: 'Poppins', sans-serif;
 }
-.loading span{
+
+.loading span {
     animation-name: dots;
     animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
 }
-.loading span:nth-child(2)
-{
+
+.loading span:nth-child(2) {
     animation-delay: 0.4s;
 }
-.loading span:nth-child(3)
-{
-    animation-delay:0.8s;
+
+.loading span:nth-child(3) {
+    animation-delay: 0.8s;
 }
-@keyframes dots{
-    50%{
+
+@keyframes dots {
+    50% {
         opacity: 0;
-        transform:scale(0.7) translateY(10px);
+        transform: scale(0.7) translateY(10px);
     }
-}.selected,.notselected{
+}
+
+.selected,
+.notselected {
     width: 200px;
     background-color: #DEF0FF;
     padding: 8px 0px;
     margin: 16px 80px;
     border-radius: 10px;
 }
-.selected{
+
+.selected {
     color: white;
-    background-color:#0038A5;
+    background-color: #0038A5;
+}
+
+.TranslateElement {
+    position: absolute;
+    top: 10px;
+    left: 70rem;
+}
+
+.TranslateElement select {
+    padding: 10px;
+    border-radius:6px;
+}
+
+.VIpgJd-ZVi9od-ORHb-OEVmcd{
+    display: none;
+    position: absolute;
 }
